# faux_sure

./: .gitignore  .pre-commit-config.yaml  README.md  index.md  requirements.txt  setup.cfg
.github/workflows/: code_quality.yaml
example_tests/test_team_sports/: test_team_sports.py
faux_orm/: not_db.py
faux_orm/recipes/: curries.py
faux_sure/: exceptions.py  not_db.py
faux_sure/recipes/: curries.py  sauces.py
