[metadata]

name = example-pkg-aannapureddy
version = 0.0.1
author = Arjun Annapureddy
author_email = arjun.annapureddy@gmail.com
description = A REPL for fast Model ProtoTyping
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aannapureddy/faux_sure
project_urls =
    Bug Tracker = https://github.com/aannapureddy/faux_sure
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6